--- a/client/client.html
+++ b/client/client.html
@@ -32,8 +32,8 @@
 
 <body>
   <div id = "page">
-    <h1>Sched-You-Ler</h1>
-
+    <h1>Sched-You-Later</h1>
+  <br>
   <div id = "LogIn">
     <form id="userForm">
       <label for="username">Username: </label>
@@ -44,86 +44,92 @@
     <section>
       <button class="btn btn-dark" id="submitButton" @click='addUser'>Sign Up</button>
       <button class="btn btn-dark" id="userButton" @click='getUser'>Log In</button>
-      <h5>{{loginStatus}}</h5>
     </section>
   </div>
-
-<nav>
-  <div class="nav nav-tabs" id="nav-tab" role="tablist">
-    <a class="btn btn-outline-secondary active" id="nav-schedule-tab" data-toggle="tab" href="#nav-schedule" role="tab" aria-controls="nav-schedule" aria-selected="true">Schedule</a>
-    <a class="btn btn-outline-secondary" id="nav-date-tab" data-toggle="tab" href="#nav-date" role="tab" aria-controls="nav-date" aria-selected="false">Date</a>
-    <a class="btn btn-outline-secondary" id="nav-numbers-tab" data-toggle="tab" href="#nav-numbers" role="tab" aria-controls="nav-date" aria-selected="false">Numbers</a>
+  <div>
+    <h5>{{loginStatus}}</h5>
   </div>
-</nav>
-<div class="tab-content" id="nav-tabContent">
-
-
-  <div class="tab-pane fade show active" id="nav-schedule" role="tabpanel" aria-labelledby="nav-schedule-tab">
-
-  <div class = "widget" id="searchBar">
-    <div>
-    <h5>Starting Time:</h5>
-    <input @input="adjustTime" type="time" id="timeX" name="timeX" v-model = "timeX">
-    <h5>Ending Time:</h5>
-    <input type="time" id="timeY" name="timeY" v-model = "timeY">
-    <h5>Search Term:</h5>
-    <input @input="inputHandler" id="textSearch" v-bind:placeholder="placeholder" v-model="message" type="text" autocomplete=off autofocus maxlength="50" ref="textBox">
+  <br>
+  <nav id = "loginNav">
+    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+      <a class="btn btn-outline-secondary active" id="nav-schedule-tab" data-toggle="tab" href="#nav-schedule" role="tab" aria-controls="nav-schedule" aria-selected="true">Schedule</a>
+      <a class="btn btn-outline-secondary" id="nav-date-tab" data-toggle="tab" href="#nav-date" role="tab" aria-controls="nav-date" aria-selected="false">Date</a>
+      <a class="btn btn-outline-secondary" id="nav-numbers-tab" data-toggle="tab" href="#nav-numbers" role="tab" aria-controls="nav-date" aria-selected="false">Numbers</a>
     </div>
-    <div>
-      <br>
-      <button class="btn btn-dark" id="getScheduleButton" @click='getSchedule'>Get Schedule</button>
-      <button class="btn btn-dark" id="addScheduleButton" @click='addSchedule'>Add to Schedule</button>
-      <button class="btn btn-dark" id="postScheduleButton" @click='postSchedule'>Post Schedule</button>
-      <button class="btn btn-dark" id="clearScheduleButton" @click='deleteSchedule'>Clear Schedule</button>
-    </div>
-  </div>
+  </nav>
 
-    <hr>
-      <div id = "innerContainer">
-          <div class="row" id = "searchResults">
-              <div class="col-sm-12">
-                  <h2>Results</h2>
-                  <result-list v-bind:results="schedule" v-bind:status="status"></result-list>
-              <br>
-              </div>
-          </div>
+  <div id = "loginContainer">
+  <div class="tab-content" id="nav-tabContent">
+  
+  
+    <div class="tab-pane fade show active" id="nav-schedule" role="tabpanel" aria-labelledby="nav-schedule-tab">
+  
+    <div class = "widget" id="searchBar">
+      <div>
+      <h5>Starting Time:</h5>
+      <input @input="adjustTime" type="time" id="timeX" name="timeX" v-model = "timeX">
+      <h5>Ending Time:</h5>
+      <input type="time" id="timeY" name="timeY" v-model = "timeY">
+      <h5>Search Term:</h5>
+      <input @input="inputHandler" id="textSearch" v-bind:placeholder="placeholder" v-model="message" type="text" autocomplete=off autofocus maxlength="50" ref="textBox">
       </div>
+      <div>
+        <br>
+        <button class="btn btn-dark" id="getScheduleButton" @click='getSchedule'>Get Schedule</button>
+        <button class="btn btn-dark" id="addScheduleButton" @click='addSchedule'>Add to Schedule</button>
+        <button class="btn btn-dark" id="postScheduleButton" @click='postSchedule'>Post Schedule</button>
+        <button class="btn btn-dark" id="clearScheduleButton" @click='deleteSchedule'>Clear Schedule</button>
+      </div>
+    </div>
   
-  </div>
-
-  <div class="tab-pane fade" id="nav-date" role="tabpanel" aria-labelledby="nav-date-tab">
-    <section>
-      <h2>Translate the Date</h2>
-      <button class="btn btn-dark" @click="getDate">Get the date!</button>
-    </section>
-
-    <hr>
-    <h2>Date:</h2>
-    <section class = "results">
-      <p v-for="opt in dateOutput">
-        {{opt}}
-      </p>
-    </section>
-  </div>
-
-
-  <div class="tab-pane fade" id="nav-numbers"  role="tabpanel" aria-labelledby="nav-numbers-tab">
-
-    <h2>Translate a number</h2>
-    <section>
-      <input type="text" placeholder = "Enter numbers here!" maxlength="5" v-model="numInput"> 
-      <button class="btn btn-dark" @click="getNumber" id="numButton">Translate!</button>
-    </section>
+      <hr>
+        <div id = "innerContainer">
+            <div class="row" id = "searchResults">
+                <div class="col-sm-12">
+                    <h2>Results</h2>
+                    <result-list v-bind:results="schedule" v-bind:status="status"></result-list>
+                <br>
+                </div>
+            </div>
+        </div>
+    
+    </div>
   
-    <hr>
-    <h2>Number Kanji:</h2>
-    <section class = "results">
-      <p v-for="opt in numOutput">
-        {{opt}}
-      </p>
-    </section>
+    <div class="tab-pane fade" id="nav-date" role="tabpanel" aria-labelledby="nav-date-tab">
+      <section>
+        <h2>Translate the Date</h2>
+        <button class="btn btn-dark" @click="getDate">Get the date!</button>
+      </section>
+  
+      <hr>
+      <h2>Date:</h2>
+      <section class = "results">
+        <p v-for="opt in dateOutput">
+          {{opt}}
+        </p>
+      </section>
+    </div>
+  
+  
+    <div class="tab-pane fade" id="nav-numbers"  role="tabpanel" aria-labelledby="nav-numbers-tab">
+  
+      <h2>Translate a number</h2>
+      <section>
+        <input type="text" placeholder = "Enter numbers here!" maxlength="5" v-model="numInput" pattern="[0-9]"> 
+        <button class="btn btn-dark" @click="getNumber" id="numButton">Translate!</button>
+      </section>
+    
+      <hr>
+      <h2>Number Kanji:</h2>
+      <section class = "results">
+        <p v-for="opt in numOutput">
+          {{opt}}
+        </p>
+      </section>
+  </div>
+  </div>
 </div>
-</div>
+
 </div>
 <script src="VueComponents.js"></script>
 <script src="VueHandler.js"></script>
